Update About Us section with new Mission, Vision, and Values content  &  add founder photo

--- a/about.html
+++ b/about.html
@@ -107,39 +107,64 @@
     <div class="container">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6 wow zoomIn" data-wow-delay="0.1s">
-                <img class="img-fluid" src="img/about.png">
+                <img class="img-fluid" src="img/about.png" alt="Sobre Veritas">
             </div>
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">Sobre Nosotros</div>
                 <h2 class="mb-4">Consultoría contable confiable para emprendedores</h2>
-                <p class="mb-4">En Veritas Despacho Contable traducimos lo complejo a lo claro. Ofrecemos servicios contables y fiscales enfocados a emprendedores y pequeños negocios, con acompañamiento real y trato humano. Nos involucramos con cada cliente como un aliado estratégico, no solo como un proveedor de servicios.</p>
+                <p class="mb-4">
+                    En <strong>Veritas Despacho Contable</strong> traducimos lo complejo a lo claro. Ofrecemos servicios contables y fiscales enfocados a emprendedores y pequeños negocios, con acompañamiento real y trato humano. Nos involucramos con cada cliente como un aliado estratégico, no solo como un proveedor de servicios.
+                </p>
 
+                <!-- Misión, Visión y Valores -->
                 <div class="row g-3 mb-4">
                     <div class="col-12 d-flex">
                         <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
-                            <i class="fa fa-user-tie text-white"></i>
+                            <i class="fa fa-bullseye text-white"></i>
                         </div>
                         <div class="ms-4">
-                            <h6>Planeación Estratégica</h6>
-                            <p class="mt-2 mb-0">Ofrecemos orientación estratégica personalizada para ayudarte a planificar el crecimiento de tu negocio desde la contabilidad.</p>
+                            <h5 class="text-primary mb-2">Nuestra Misión</h5>
+                            <p class="mb-0">Dar a pequeños emprendedores seguridad y confianza para tomar mejores decisiones financieras y fiscales, con un servicio claro, cercano y confiable.</p>
                         </div>
                     </div>
+
                     <div class="col-12 d-flex">
                         <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
-                            <i class="fa fa-chart-line text-white"></i>
+                            <i class="fa fa-eye text-white"></i>
                         </div>
                         <div class="ms-4">
-                            <h6>Análisis Financiero</h6>
-                            <p class="mt-2 mb-0">Con reportes claros y precisos, ayudamos a los emprendedores a entender sus finanzas y tomar decisiones informadas.</p>
+                            <h5 class="text-primary mb-2">Nuestra Visión</h5>
+                            <p class="mb-0">Ser el despacho contable de confianza y cercanía para emprendedores, acompañándolos con claridad y experiencia en su camino de crecimiento.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 d-flex">
+                        <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
+                            <i class="fa fa-heart text-white"></i>
+                        </div>
+                        <div class="ms-4">
+                            <h5 class="text-primary mb-2">Nuestros Valores</h5>
+                            <ul class="mb-0 ps-3">
+                                <li><strong>Claridad:</strong> Explicamos lo complejo de forma sencilla.</li>
+                                <li><strong>Compromiso:</strong> Nos involucramos con responsabilidad en cada caso.</li>
+                                <li><strong>Confianza:</strong> Actuamos con integridad y confidencialidad.</li>
+                                <li><strong>Precisión:</strong> Aplicamos criterios técnicos actualizados y correctos.</li>
+                                <li><strong>Cercanía:</strong> Estamos disponibles, atentos y los escuchamos.</li>
+                                <li><strong>Mejora continua:</strong> Siempre buscamos hacerlo mejor, para ellos y con ellos.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+                <!-- Fin Misión, Visión y Valores -->
+
                 <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Leer más</a>
             </div>
         </div>
     </div>
 </div>
 <!-- About End -->
+
+
 
 
        <!-- Features Start -->
@@ -227,9 +252,9 @@
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item">
-                    <h5>Francisco Cajijaz</h5>
+                    <h5>Francisco Hernandez Cajija</h5>
                     <p class="mb-4">Fundador & Contador General</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="img/team-2.jpg" alt="María González">
+                    <img class="img-fluid rounded-circle w-100 mb-4" src="img/fundador.png" alt="María González">
                     <div class="d-flex justify-content-center">
                         <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
