--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item">
-                    <h5>Francisco Cajijaz</h5>
+                    <h5>Francisco Hernandez Cajija</h5>
                     <p class="mb-4">Fundador & Contador General</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="img/team-2.jpg" alt="María González">
+                    <img class="img-fluid rounded-circle w-100 mb-4" src="img/fundador.png" alt="María González">
                     <div class="d-flex justify-content-center">
                         <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
@@ -498,8 +498,8 @@
         <div class="row g-5">
             <div class="col-md-6 col-lg-3">
                 <h5 class="text-white mb-4">Contáctanos</h5>
-                <p><i class="fa fa-map-marker-alt me-3"></i>Cancún, Quintana Roo, México</p>
-                <p><i class="fa fa-phone-alt me-3"></i>+52 998 123 4567</p>
+                <p><i class="fa fa-map-marker-alt me-3"></i>Playa Del Carmen, México</p>
+                <p><i class="fa fa-phone-alt me-3"></i>+52 984 190 5088</p>
                 <p><i class="fa fa-envelope me-3"></i>contacto@veritascontable.mx</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-twitter"></i></a>
